compiler/tests/success/x86-64/variable_initialization.jazz
fn test_randombytes () {
    stack u8[1] r;
    reg u64 len = 1;
    reg ptr u8[1] q = #randombytes(r, len);
}

#[stacksize = 4]
export fn rand() -> reg u32 {
  stack u8[4] _x x;
  reg u64 len = 4;
  x = #randombytes(_x, len);
  reg u32 r;
  r = x[:u32 0];
  return r;
}

